Update styles.css - fixed column overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,13 +32,10 @@ html, body{
 }
 
 @media screen{
-    #main{
-        max-width: 1140px;
-    }
 
     #header{
         top: 0; left: 0;
-        height: 100%; width: 30%;
+        height: 100%; width: 20%;
         padding: 1em;
         padding-top: 150px;
         position: fixed;
@@ -55,7 +52,7 @@ html, body{
 
 
     #primary{
-        top: 0; left: 30%; width: 70%;
+        top: 0; left: 20%; width: 80%;
         position: absolute;
         padding: 1em;
         padding-top: 25px; padding-left: 20px; padding-right: 20px;
@@ -71,7 +68,7 @@ html, body{
         height:auto;
     }
     .column{
-        float:left;
+        float: left;
         width:100%;
         padding:10px;
     }
@@ -79,17 +76,20 @@ html, body{
     #img-wide{
         max-width: 100%;
     }
+
+    #portrait-photo{
+        width:fit-content;
+    }
+    #portrait-photo img{
+        width:400px;
+        height:auto;
+    }
 }
 
-@media screen and (min-width: 1140px){
-    #header{width: 20%;}
-
-    #primary{top: 0; left: 20%; width: 80%;}
-    
-    .column{width: 50%}
-    .spec-1{width: 70%}
-    .max-c{width: 100%}
-    #portrait-photo{width:30%;}
+@media screen and (min-width: 1820px){
+    .column{width: auto; max-width: 50%;}
+    .spec-1{max-width: 70%;}
+    .max-c{max-width: 100%;}
 }
 
 /* Other Formatting */
